--- a/sicupira/templates/sicupira/uf_form.html
+++ b/sicupira/templates/sicupira/uf_form.html
@@ -5,7 +5,7 @@
 {% block content %}
 {% load static %} 
 
-<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Formulário de Instituição</h3>
+<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Formulário de UF</h3>
 
 <div style="width: 90%;margin: auto;">
     <form method="post">
@@ -14,5 +14,4 @@
       <input type="submit" value="Salvar" class="btn btn-primary" />
     </form>
 </div>
-{% endblock %} 
-  
+{% endblock %}
