--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -38,10 +38,10 @@ body {
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Programa
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Dados Cadastrais</a></li>
-            <li><a href="#">Linhas de Pesquisa</a></li>
-            <li><a href="#">Disciplinas</a></li>
-            <li><a href="#">Turmas</a></li>
+            <li><a href="/programa">Dados Cadastrais</a></li>
+            <li><a href="/linhadepesquisa">Linhas de Pesquisa</a></li>
+            <li><a href="/disciplina">Disciplinas</a></li>
+            <li><a href="/turma">Turmas</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -58,6 +58,14 @@ body {
           <ul class="dropdown-menu">
             <li><a href="/instituicao">Instituição</a></li>
             <li><a href="/uf">UF</a></li>            
+            <li><a href="/regiao">Região</a></li>
+            <li><a href="/modalidade">Modalidade do programa</a></li>
+            <li><a href="/situacaoprograma">Situação do programa</a></li>
+            <li><a href="/situacaodiscente">Situação do discente</a></li>
+            <li><a href="/niveldiscente">Nivel do discente</a></li>
+            <li><a href="/categoria">Categoria do docente</a></li>
+            <li><a href="/nota">Nota do curso</a></li>
+            <li><a href="/niveldisciplina">Nivel da Disciplina</a></li>
           </ul>
         </li>
         <li class="dropdown">
