Correção template Instituição

--- a/sicupira/templates/sicupira/instituicao_list.html
+++ b/sicupira/templates/sicupira/instituicao_list.html
@@ -4,8 +4,8 @@
 {% load static %} 
   
   <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Instituições</h3>
-  <p>    
 
+  <div style="width: 90%;margin: auto;">
 
     <table class="table table-striped">
         <thead>
