--- a/sicupira/templates/sicupira/endereco_form.html
+++ b/sicupira/templates/sicupira/endereco_form.html
@@ -5,7 +5,7 @@
 {% block content %}
 {% load static %} 
 
-<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Formulário de Instituição</h3>
+<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Formulário de Endereço</h3>
 
 <div style="width: 90%;margin: auto;">
     <form method="post">
