--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -35,10 +35,11 @@ body {
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Inicio</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Programa
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dados cadastrais
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/programa">Dados Cadastrais</a></li>
+            <li><a href="/programa">Dados Básicos do Programa</a></li>
+            <li><a href="/endereco">Endereços</a></li>
             <li><a href="/linhadepesquisa">Linhas de Pesquisa</a></li>
             <li><a href="/disciplina">Disciplinas</a></li>
             <li><a href="/turma">Turmas</a></li>
@@ -56,7 +57,6 @@ body {
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dados Complementares
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/instituicao">Instituição</a></li>
             <li><a href="/uf">UF</a></li>            
             <li><a href="/regiao">Região</a></li>
             <li><a href="/modalidade">Modalidade do programa</a></li>
