--- a/sicupira/templates/sicupira/endereco_detail.html
+++ b/sicupira/templates/sicupira/endereco_detail.html
@@ -3,11 +3,11 @@
 {% block content %}
 {% load static %} 
   
-  <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Instituições</h3>
+  <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Endereços</h3>
   <p>    
 
 
-    <h3>Detalhes Instituição</h3>
+    <h3>Detalhes Endereço</h3>
     <h4>Nome: {{instituicao.nome}}</h4>
     UF:  {{ instituicao.uf }}<br/>
     Cep: {{ instituicao.cep }}<br/>
