Menu de admin criado para dados complementares

--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -53,21 +53,7 @@ body {
             <li><a href="#">Discentes</a></li>            
           </ul>
         </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dados Complementares
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/uf">UF</a></li>            
-            <li><a href="/regiao">Região</a></li>
-            <li><a href="/modalidade">Modalidade do programa</a></li>
-            <li><a href="/situacaoprograma">Situação do programa</a></li>
-            <li><a href="/situacaodiscente">Situação do discente</a></li>
-            <li><a href="/niveldiscente">Nivel do discente</a></li>
-            <li><a href="/categoria">Categoria do docente</a></li>
-            <li><a href="/nota">Nota do curso</a></li>
-            <li><a href="/niveldisciplina">Nivel da Disciplina</a></li>
-          </ul>
-        </li>
+        <li class="active"><a href="/admin">Admin</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sobre
           <span class="caret"></span></a>
