--- a/sicupira/templates/sicupira/endereco_list.html
+++ b/sicupira/templates/sicupira/endereco_list.html
@@ -11,13 +11,14 @@
         <thead>
         
             <tr>
-                <th>nome</th>
-                <th>cep</th>
+                <th>Nome da IES</th>
+                <th>cep</th>                
                 <th>logradouro</th>    
                 <th>numero</th>
                 <th>complemento</th>
                 <th>bairro</th>
                 <th>municipio</th>
+                <th>UF</th>
                 <th>fax</th>
                 <th>telefone</th>
                 <th>ramal</th>
@@ -42,6 +43,7 @@
             <td>{{ endereco.complemento }}</td>
             <td>{{ endereco.bairro }}</td>
             <td>{{ endereco.municipio }}</td>
+            <td>{{ endereco.uf }}</td>
             <td>{{ endereco.fax }}</td>
             <td>{{ endereco.telefone }}</td>
             <td>{{ endereco.ramal }}</td>
