--- a/sicupira/templates/sicupira/uf_list.html
+++ b/sicupira/templates/sicupira/uf_list.html
@@ -9,8 +9,6 @@
 
     <table class="table table-striped">
         <thead>
-            
-        
             <tr>
                 <th>nome</th>
                 <th>sigla</th>                
@@ -20,7 +18,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for uf in object_list %}
+            {% for uf in page_obj %}
             <tr>
             <td>{{ uf.nome }}</td>
             <td>{{ uf.sigla }}</td>
@@ -31,9 +29,27 @@
             {% endfor %}
         </tbody>
         </table>
-        
 
-        <a href="{% url "uf_new" %}">Novo</a>
+        <a href="{% url "uf_new" %}" style="float: left;">Novo</a> 
+
+        <div class="pagination" style="padding-left: 35%;">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1">&laquo; primeiro</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">anterior</a>
+                {% endif %}
+        
+                <span class="current">
+                    Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
+                </span>
+        
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">próximo</a>
+                    <a href="?page={{ page_obj.paginator.num_pages }}">último &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+
 </div>
 
 {% endblock %}
