--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -26,6 +26,11 @@ body {
 </head>
 <body>
 
+<script>
+const queryString = window.location.search;
+const urlParams = new URLSearchParams(queryString);
+</script>
+
 
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
