--- a/sicupira/templates/sicupira/endereco_list.html
+++ b/sicupira/templates/sicupira/endereco_list.html
@@ -7,6 +7,45 @@
 
   <div style="width: 90%;margin: auto;">
 
+
+    <div class="container">
+        <h4>Filtro</h2>
+        <form action="/endereco" method="get">
+            <div class="form-group">
+                <label for="nome">Nome:</label>
+                <input type="search" class="form-control" id="nome" name="nome" value="" list="lista_nome">                
+                <datalist id="lista_nome">
+                    {% for endereco in page_obj %}
+                        <option value="{{ endereco.nome }}"></option>
+                    {% endfor %}
+                </datalist>
+            </div>
+            <div class="form-group">
+                <label for="uf">UF:</label>
+                <select class="form-control" id="uf" name="uf">
+                    {% for endereco in page_obj %}
+                      <option value="{{ endereco.uf }}">{{ endereco.uf }}</option>
+                    {% endfor %}
+                </select>
+            </div>            
+            <button type="submit" class="btn btn-default">Buscar</button>        
+            <button type="reset"  class="btn btn-warning" id="btnReset" onclick="Reset();" >Limpar</button>      
+        </form>
+    </div>
+    <script>
+        // Script para manipular via DOM as buscas
+        document.getElementById('nome').value = urlParams.get('nome')
+        document.getElementById('uf').value = urlParams.get('uf')  
+
+        //Reseta formulario. Troque pela url correta
+        function Reset() {
+            location.replace('/endereco');
+        }
+
+    </script>
+
+<hr/>
+
     <table class="table table-striped">
         <thead>
         
