--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -58,6 +58,7 @@ const urlParams = new URLSearchParams(queryString);
             <li><a href="#">Discentes</a></li>            
           </ul>
         </li>
+        <li class="active"><a href="/importaxml">Lattes</a></li>
         <li class="active"><a href="/admin">Admin</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sobre
