Versão de Django e menu de teste

--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -66,6 +66,8 @@ const urlParams = new URLSearchParams(queryString);
           <ul class="dropdown-menu">
             <li><a href="#">Documentação</a></li>
             <li><a href="#">Sobre</a></li>            
+            <li><a href="/uf">Teste UF</a></li>            
+            <li><a href="/endereco">Teste Endereço</a></li>            
           </ul>
         </li>
       </ul>
