--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -64,8 +64,10 @@ const urlParams = new URLSearchParams(queryString);
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sobre
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Documentação</a></li>
-            <li><a href="#">Sobre</a></li>            
+            <li><a href="https://gitlab.com/ime-dsc-2020/sicupira">Código fonte</a></li>
+            <li><a href="https://gitlab.com/ime-dsc-2020/sicupira/-/wikis/home">Wiki</a></li>            
+            <li><a href="https://gitlab.com/ime-dsc-2020/sicupira#equipe">Equipe</a></li>            
+            <li>---</li>
             <li><a href="/uf">Teste UF</a></li>            
             <li><a href="/endereco">Teste Endereço</a></li>            
           </ul>
