Modelos validados e views Disciplina e Linha de pesquisa implementadas

--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -45,7 +45,7 @@ const urlParams = new URLSearchParams(queryString);
           <ul class="dropdown-menu">
             <li><a href="/programa">Dados Básicos do Programa</a></li>
             <li><a href="/endereco">Endereços</a></li>
-            <li><a href="/linhadepesquisa">Linhas de Pesquisa</a></li>
+            <li><a href="/linhapesquisa">Linhas de Pesquisa</a></li>
             <li><a href="/disciplina">Disciplinas</a></li>
             <li><a href="/turma">Turmas</a></li>
           </ul>
@@ -67,9 +67,9 @@ const urlParams = new URLSearchParams(queryString);
             <li><a href="https://gitlab.com/ime-dsc-2020/sicupira">Código fonte</a></li>
             <li><a href="https://gitlab.com/ime-dsc-2020/sicupira/-/wikis/home">Wiki</a></li>            
             <li><a href="https://gitlab.com/ime-dsc-2020/sicupira#equipe">Equipe</a></li>            
-            <li>---</li>
-            <li><a href="/uf">Teste UF</a></li>            
-            <li><a href="/endereco">Teste Endereço</a></li>            
+            <li>----------------</li>
+            <li><a href="/estado">Teste View UF</a></li>            
+            <li><a href="/endereco">Teste View Endereço</a></li>            
           </ul>
         </li>
       </ul>
