--- a/sicupira/templates/sicupira/estado_detail.html
+++ b/sicupira/templates/sicupira/estado_detail.html
@@ -4,7 +4,7 @@
 {% load static %} 
 
 <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Detalhes da UF</h3>
-    <h4>Nome: {{uf.nome}}</h4>
-    Sigla: {{ uf.sigla }}<br/>    
+    <h4>Nome: {{estado.nome}}</h4>
+    Sigla: {{ estado.sigla }}<br/>    
     
 {% endblock %}
