--- a/sicupira/templates/sicupira/estado_confirm_delete.html
+++ b/sicupira/templates/sicupira/estado_confirm_delete.html
@@ -5,7 +5,7 @@
 
     <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Apaga UF</h3>
     <form method="post">{% csrf_token %}
-        Voce realmente quer apagar "{{ uf.nome }}" ?<br/>
+        Voce realmente quer apagar "{{ estado.nome }}" ?<br/>
         <input type="submit" value="Apagar" class="btn btn-danger" />
     </form>
 
