Cadastrada Views e URLs para Programa, EndereçoPrograma e Turmas

--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -44,7 +44,7 @@ const urlParams = new URLSearchParams(queryString);
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/programa">Dados Básicos do Programa</a></li>
-            <li><a href="/endereco">Endereços</a></li>
+            <li><a href="/enderecoprograma">Endereços</a></li>
             <li><a href="/linhapesquisa">Linhas de Pesquisa</a></li>
             <li><a href="/disciplina">Disciplinas</a></li>
             <li><a href="/turma">Turmas</a></li>
