--- a/sicupira/templates/sicupira/enderecoprograma_confirm_delete.html
+++ b/sicupira/templates/sicupira/enderecoprograma_confirm_delete.html
@@ -5,7 +5,7 @@
 
 <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Apaga Endereço</h3>
 <form method="post">{% csrf_token %}
-    Voce realmente quer apagar "{{ endereco.nome }}" ?<br/>
+    Voce realmente quer apagar "{{ enderecoprograma.nome_programa }}" ?<br/>
     <input type="submit" value="Apagar" class="btn btn-danger" />
 </form>
 
