Templates de busca elaborados Programa e Turma

--- a/sicupira/templates/sicupira/disciplina_list.html
+++ b/sicupira/templates/sicupira/disciplina_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load static %} 
 
-<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> UFs</h3>
+<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Disciplinas</h3>
 
 <div style="width: 90%;margin: auto;">
 
