Criacao de Area Basica

--- a/sicupira/templates/sicupira/programa_detail.html
+++ b/sicupira/templates/sicupira/programa_detail.html
@@ -11,7 +11,9 @@
     Nota: {{ programa.nota }}<br/>    
     Flag Cooperação: {{ programa.flg_cooperacao }}<br/>    
     Flag rede: {{ programa.flg_rede }}<br/>    
-    Modalidade: {{ programa.modalidade_id }}<br/>    
+    Modalidade: {{ programa.modalidade_id }}<br/>        
+    Area Avaliação: {{ programa.area_avaliacao.area_avaliacao }}<br/>        
+    Area Básica: {{ programa.area_basica.desc_area_basica }}<br/>        
     Regime Letivo: {{ programa.regime_letivo_id }}<br/>    
     Estado: {{ programa.estado_id }}<br/>    
     Região: {{ programa.regiao_id }}<br/>    
