--- a/sicupira/templates/sicupira/linhapesquisa_confirm_delete.html
+++ b/sicupira/templates/sicupira/linhapesquisa_confirm_delete.html
@@ -5,7 +5,7 @@
 
     <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Apaga Linha de Pesquisa</h3>
     <form method="post">{% csrf_token %}
-        Voce realmente quer apagar "{{ linhapesquisa.desc_linha_pesquisa }}" ?<br/>
+        Voce realmente quer apagar "{{ linhapesquisa.nome_linha_pesquisa }}" ?<br/>
         <input type="submit" value="Apagar" class="btn btn-danger" />
     </form>
 
