--- a/sicupira/templates/sicupira/linhapesquisa_detail.html
+++ b/sicupira/templates/sicupira/linhapesquisa_detail.html
@@ -4,6 +4,11 @@
 {% load static %} 
 
 <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Detalhes da Linha de Pesquisa</h3>
-    <h4>Nome: {{linhapesquisa.desc_linha_pesquisa}}</h4>
-    
+    <h4>Nome: {{linhapesquisa.nome_linha_pesquisa}}</h4>
+    Código do Programa: {{ linhapesquisa.area_concentracao_id.programa_id.codigo_programa }}<br/>    
+    Programa: {{ linhapesquisa.area_concentracao_id.programa_id.nome_programa }}<br/>    
+    Área de Concentração: {{ linhapesquisa.area_concentracao_id }}<br/>    
+    Data de Início: {{ linhapesquisa.data_inicio }}<br/> 
+    Data de Fim: {{ linhapesquisa.data_fim }}<br/>
+
 {% endblock %}
