Dados Básicos, Endereço e Curso (inclusão)

--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -51,11 +51,12 @@ const urlParams = new URLSearchParams(queryString);
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Inicio</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dados cadastrais
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Programa
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/programa">Dados Básicos do Programa</a></li>
-            <li><a href="/enderecoprograma">Endereços</a></li>
+            <li><a href="/programa">Dados Cadastrais - Básicos</a></li>
+            <li><a href="/enderecoprograma">Dados Cadastrais - Endereços</a></li>
+            <li><a href="/curso">Dados Cadastrais - Cursos</a></li>
             <li><a href="/linhapesquisa">Linhas de Pesquisa</a></li>
             <li><a href="/disciplina">Disciplinas</a></li>
             <li><a href="/turma">Turmas</a></li>
