bread crumbs inseridos em todos os templates

--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -89,7 +89,7 @@ const urlParams = new URLSearchParams(queryString);
   </nav>
 
   <p>    
-
+    {% block breadcrumbs %}Home{% endblock %}
     {% block content %}
     {% endblock %}
 
