--- a/sicupira/templates/sicupira/curso_form.html
+++ b/sicupira/templates/sicupira/curso_form.html
@@ -1,5 +1,9 @@
 {% extends 'sicupira/base.html' %}
 
+{% block breadcrumbs %}
+    {{ block.super }} » <a href="{% url 'curso_edit' curso.id %}">Formulário do curso</a>
+{% endblock %}
+
 {% load crispy_forms_tags %}
 
 {% block content %}
