--- a/sicupira/templates/sicupira/disciplina_form.html
+++ b/sicupira/templates/sicupira/disciplina_form.html
@@ -1,5 +1,9 @@
 {% extends 'sicupira/base.html' %}
 
+{% block breadcrumbs %}
+    {{ block.super }} » <a href="{% url 'disciplina_edit' disciplina.id %}">Formulário de disciplina</a>
+{% endblock %}
+
 {% load crispy_forms_tags %}
 
 {% block content %}
