--- a/sicupira/templates/sicupira/enderecoprograma_detail.html
+++ b/sicupira/templates/sicupira/enderecoprograma_detail.html
@@ -1,5 +1,9 @@
 {% extends 'sicupira/base.html' %}
 
+{% block breadcrumbs %}
+    {{ block.super }} » <a href="{% url 'enderecoprograma_view' enderecoprograma.id %}">Detalhes do endereço do programa</a>
+{% endblock %}
+
 {% block content %}
 {% load static %} 
   
