--- a/sicupira/templates/sicupira/programa_confirm_delete.html
+++ b/sicupira/templates/sicupira/programa_confirm_delete.html
@@ -1,5 +1,9 @@
 {% extends 'sicupira/base.html' %}
 
+{% block breadcrumbs %}
+    {{ block.super }} » <a href="{% url 'programa_delete' programa.id %}">Apagar programa</a>
+{% endblock %}
+
 {% block content %}
 {% load static %} 
 
