--- a/sicupira/templates/sicupira/disciplina_detail.html
+++ b/sicupira/templates/sicupira/disciplina_detail.html
@@ -1,5 +1,9 @@
 {% extends 'sicupira/base.html' %}
 
+{% block breadcrumbs %}
+    {{ block.super }} » <a href="{% url 'diciplina_view' disciplina.id %}">Detalhes da disciplina</a>
+{% endblock %}
+
 {% block content %}
 {% load static %} 
 
