--- a/sicupira/templates/sicupira/linhapesquisa_form.html
+++ b/sicupira/templates/sicupira/linhapesquisa_form.html
@@ -1,5 +1,9 @@
 {% extends 'sicupira/base.html' %}
 
+{% block breadcrumbs %}
+    {{ block.super }} » <a href="{% url 'linhapesquisa_edit' linhapesquisa.id %}">Formulário do linha de pesquisa</a>
+{% endblock %}
+
 {% load crispy_forms_tags %}
 
 {% block content %}
