--- a/sicupira/templates/sicupira/turma_detail.html
+++ b/sicupira/templates/sicupira/turma_detail.html
@@ -1,5 +1,9 @@
 {% extends 'sicupira/base.html' %}
 
+{% block breadcrumbs %}
+    {{ block.super }} » <a href="{% url 'turma_view' turma.id %}">Detalhes da turma</a>
+{% endblock %}
+
 {% block content %}
 {% load static %} 
 
